sshm/tests/snapshots/integration_test__add_connection_popup.snap
---
source: tests/integration_test.rs
expression: backend
---
"◆  Add Connection                                                               "
"│  Alias                                                                        "
"│  Host    (empty)                                                              "
"│  User    (empty)                                                              "
"│  Port    (empty)                                                              "
"│  Key     (empty)                                                              "
"│  Folder  (empty)                                                              "
"│  Tab/Right/Down: Next field | Shift+Tab/Left/Up: Previous | Enter: Save | Esc:"
"└                                                                               "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
