sshm/tests/snapshots/integration_test__connection_with_custom_port.snap
---
source: tests/integration_test.rs
expression: backend
---
"◆  SSH Connection Manager                                                       "
"│  Search: Type to search...                                                    "
"│                                                                               "
"│  ❯ ● [prod] custom-port (admin@192.168.1.100:2222)                            "
"│                                                                               "
"│  ↑↓/j k: Navigate | Enter: Connect | A: Add | E: Edit | D: Delete | I: Import "
"└                                                                               "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
