sshm/tests/snapshots/integration_test__edit_connection_popup.snap
---
source: tests/integration_test.rs
expression: backend
---
"◆  Edit Connection                                                              "
"│  Alias   prod-server                                                          "
"│  Host    192.168.1.10                                                         "
"│  User    admin                                                                "
"│  Port    22                                                                   "
"│  Key     (empty)                                                              "
"│  Folder  production                                                           "
"│  Tab/Right/Down: Next field | Shift+Tab/Left/Up: Previous | Enter: Save | Esc:"
"└                                                                               "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
