sshm/tests/snapshots/integration_test__empty_connections_message.snap
---
source: tests/integration_test.rs
expression: backend
---
"┌ SSH Connection Manager ──────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Search ──────────────────────────────────────────────────────────────────────┐"
"│Type to search...                                                             │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│              No connections. Press 'a' to add a new connection.              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│  ↑↓/j k: Navigate | Enter: Connect | /: Search | ?: Help | q: Quit | a: Add  │"
"└──────────────────────────────────────────────────────────────────────────────┘"
