sshm/tests/snapshots/integration_test__folder_grouping_display.snap
---
source: tests/integration_test.rs
expression: backend
---
"◆  SSH Connection Manager                                                       "
"│  Search: Type to search...                                                    "
"│                                                                               "
"│  ❯ ● [folder1] server1 (user@192.168.1.1:22)                                  "
"│    ○ [folder1] server2 (user@192.168.1.2:22)                                  "
"│    ○ [folder2] server3 (user@192.168.1.3:22)                                  "
"│                                                                               "
"│  ↑↓/j k: Navigate | Enter: Connect | A: Add | E: Edit | D: Delete | I: Import "
"└                                                                               "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
