sshm/tests/snapshots/integration_test__help_mode_shows_help_popup.snap
---
source: tests/integration_test.rs
expression: backend
---
"◆  Keyboard Shortcuts                                                           "
"│  Navigation                                                                   "
"│    ↑↓ or j/k    Move up/down in list                                          "
"│    g            Go to first item                                              "
"│    G            Go to last item                                               "
"│    Enter        Connect to selected server                                    "
"│                                                                               "
"│  Actions                                                                      "
"│    A            Add new connection                                            "
"│    E            Edit selected connection                                      "
"│    D            Delete selected connection                                    "
"│    I            Import from ~/.ssh/config                                     "
"│    /            Search/filter connections                                     "
"│    ?            Show this help menu                                           "
"│                                                                               "
"│  General                                                                      "
"│    q            Quit application                                              "
"│    Esc          Cancel current action                                         "
"│    a-z          Any other letter filters the list                             "
"│                                                                               "
"│  Press Esc or q to return                                                     "
"└                                                                               "
"                                                                                "
"                                                                                "
