sshm/tests/snapshots/integration_test__input_field_navigation.snap
---
source: tests/integration_test.rs
expression: backend
---
"◆  Add Connection                                                               "
"│  Alias   test                                                                 "
"│  Host    example.com                                                          "
"│  User    user                                                                 "
"│  Port                                                                         "
"│  Key     (empty)                                                              "
"│  Folder  (empty)                                                              "
"│  Tab/Right/Down: Next field | Shift+Tab/Left/Up: Previous | Enter: Save | Esc:"
"└                                                                               "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
