sshm/tests/snapshots/integration_test__message_popup.snap
---
source: tests/integration_test.rs
expression: backend
---
"┌ SSH Connection Manager ──────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Search ──────────────────────────────────────────────────────────────────────┐"
"│Type to search...                                                             │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│ > [production]  prod-server (admin@192.168.1.10:22)                          │"
"│   [development]  dev-server (developer@192.168.1.20:2222)                    │"
"│   web-server (www@example.com:22)                                            │"
"│                   ┌ Message ─────────────────────────────┐                   │"
"│                   │             Test message             │                   │"
"│                   │                                      │                   │"
"│                   │                                      │                   │"
"│                   └──────────────────────────────────────┘                   │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│  ↑↓/j k: Navigate | Enter: Connect | /: Search | ?: Help | q: Quit | a: Add  │"
"└──────────────────────────────────────────────────────────────────────────────┘"
