sshm/tests/snapshots/integration_test__no_matches_shows_message.snap
---
source: tests/integration_test.rs
expression: backend
---
"┌ SSH Connection Manager ──────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Search ──────────────────────────────────────────────────────────────────────┐"
"│nonexistent                                                                   │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│                       No connections match your search.                      │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│  ↑↓/j k: Navigate | Enter: Connect | /: Search | ?: Help | q: Quit | a: Add  │"
"└──────────────────────────────────────────────────────────────────────────────┘"
